Cambio de Password de computadora personal

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=DB_RESTAURANTE
 spring.datasource.username=sa
-spring.datasource.password=D3v3lSecurity1!
+spring.datasource.password=Valeria1&1&
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
