--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=DB_RESTAURANTE
-spring.datasource.username=sa
-spring.datasource.password=D3v3lSecurity1!
+spring.datasource.url=jdbc:sqlserver://ec2-18-191-57-221.us-east-2.compute.amazonaws.com\\SQL_RESTAURANTE;databaseName=DB_RESTAURANT
+spring.datasource.username=restaurante
+spring.datasource.password=R*2020
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto = none
 spring.jackson.serialization.fail-on-empty-beans=false
+server.port=8081
+
